home-assistant/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: home-assistant
  namespace: k8s-home
  labels:
    app: home-assistant
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: evns/rpi-home-assistant
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: "/config/automations.yaml"
            subPath: automations.yaml
            name: "config"
          - mountPath: "/config/configuration.yaml"
            subPath: configuration.yaml
            name: "config"
          - mountPath: "/config/groups.yaml"
            subPath: groups.yaml
            name: "config"
          - mountPath: "/config/light.yaml"
            subPath: light.yaml
            name: "config"
          - mountPath: "/config/scripts.yaml"
            subPath: scripts.yaml
            name: "config"
          - mountPath: "/config/switch.yaml"
            subPath: switch.yaml
            name: "config"
          - mountPath: "/config/.HA_VERSION"
            subPath: .HA_VERSION
            name: "config"
          - mountPath: "/config/known_devices.yaml"
            subPath: known_devices.yaml
            name: "config"
          # Secrets
          - name: secrets
            mountPath: "/config/secrets.yaml"
            subPath: secrets.yaml
          # Stateful host mounts
          - name: deps
            mountPath: "/config/deps"
          - name: "db"
            mountPath: "/config/home-assistant_v2.db"
      volumes:
        - name: config
          configMap:
            name: hass-config
        - name: secrets
          secret: 
            secretName: hass-secrets
        - name: deps
          hostPath:
            type: DirectoryOrCreate
            path: /k8s-home/home-assistant/config/deps
        - name: db
          hostPath:
            type: FileOrCreate
            path: /k8s-home/home-assistant/config/home-assistant_v2.db
