home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: k8s-home
spec:
  selector:
    app: home-assistant
  ports:
  - port: 80
    targetPort: 8123
